--- a/.gitconfig
+++ b/.gitconfig
@@ -1,27 +1,24 @@
-[push]
-	default = simple
-
 [alias]
-	b = branch
-	bD = branch -D
-	bs = branch -d
-	co = checkout
-	cp = cherry-pick
+  b = branch
+  bD = branch -D
+  co = checkout
+  cp = cherry-pick
+  fdiff = diff --stat
+  logp = log --graph --oneline
+  pullr = pull --rebase
+  st = status
 
-	fdiff = diff --stat
-	fdiffm = !git it && git diff --stat master
-	it = !git co master && git fetch upstream && git reset --hard upstream/master && git push && git co -
-	logp = log --graph --oneline
-	pullr = pull --rebase
-	st = status
-	s = status
-	pushboth = !git push && git push upstream
-
-[user]
-	name = Gabe Gonzalez
-	email = gabegonzalez24@gmail.com
+[credential]
+  helper = store
 
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
-	required = true
+  clean = git-lfs clean %f
+  smudge = git-lfs smudge %f
+  required = true
+
+[push]
+  default = simple
+
+[user]
+  name = Gabe Gonzalez
+  email = gabegonzalez24@gmail.com
